# iced-qr

./: Cargo.toml
src/: main.rs
