[package]
name = "iced-qr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced.git", features = ["image", "svg","smol","advanced"] }
qrcode-generator = "4.1.9"
